--- a/application/index/view/index/ActivitiesDetails.html
+++ b/application/index/view/index/ActivitiesDetails.html
@@ -45,7 +45,7 @@
                               {volist name="yjf" id="value"}
                               <ul class="slides">
                                   <li>
-                                      <img src="/uploads/{$value.pic}" alt="" />
+                                      <img src="/uploads/{$value.pic}" alt="" width="120px"  />
                                   </li>
                               </ul>
                               {/volist}
@@ -55,7 +55,7 @@
                               <div id="shop_detaild_slider">
                                   <ul class="slides">
                                       <li>
-                                          <img src="/uploads/{$details.pic}" alt="" />
+                                          <img src="/uploads/{$details.pic}" alt="" width="420px"height=""; />
                                       </li>
                                   </ul>
                               </div>
@@ -77,7 +77,9 @@
                               <span>(4 reviws) / Add to reviews</span>
                           </div>
                           <div class="gt_shop_price_wrap">
-                              <h5 style="font-family:Times New Roman,Georgia,Serif;">{$details.ac_opentime}~{$details.ac_closetime}</h4>
+                              <h5 style="font-family:Times New Roman,Georgia,Serif;">{$details.ac_opentime}~{$details.ac_closetime}</h5>
+                              <p hidden id="opentime">{$details.ac_opentime}</p>
+                              <p hidden id="closetime">{$details.ac_closetime}</p>
                               <h5 style="font-family:Times New Roman,Georgia,Serif;">地址：{$details.ac_spot}</h5>
                               <h5>{$details.ac_price}</h5>
                               <h5 style="margin-top:5px;margin-bottom:5px;font-weight:thick;">举办方：{$details.ac_host}</h5>
@@ -90,7 +92,9 @@
                              <!--  <p>{$details.ac_details}</p> -->
                           <!-- </div> -->
                           <div class="gt_product_button_wrap">
-                            <button id="signup" onclick="return false" ;>我要报名</button>
+                            <!-- <button id="signup" onclick="checkSignup()";>我要报名</button> -->
+                             <button type="button" id="signup" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">我要报名</button>
+                           <!--  <button id="signup"></button> -->
                             <!-- <button>Whishlist</button> -->
                           </div>
                       </div>
@@ -107,121 +111,121 @@
         <!--Shop Wrap End-->
     </div>
 
-{/block}
 
-{block name="myjs"}
+<!--  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Open modal for @mdo</button>
+ -->
 
-{/block}{extend name="index/index"}
-{block name="main"}
-
-
-    <link href="style.css" rel="stylesheet">
-    <!-- Color CSS -->
-    <link href="css/color.css" rel="stylesheet">
-    <!-- Responsive CSS -->
-    <link href="css/responsive.css" rel="stylesheet">
-    <!--Sub Banner Wrap Start -->
-    <div class="gt_sub_banner_bg default_width">
-        <div class="container">
-            <div class="gt_sub_banner_hdg  default_width">
-                 <h2>美丽乡村 汇聚精彩活动</h2>
-                <h6>如果你不出去走走，你会以为这就是世界</h6>
-            </div>
-        </div>
-    </div>
-    <!--Sub Banner Wrap End -->
-    <!--Breadcrumb Wrap End -->
-    <div class="gt_breadcrumb_bg default_width">
-      <div class="container">
-        <div class="gt_breadcrumb_wrap default_width">
-            <ul>
-                <li><a href="#">美丽乡村</a></li>
-                <li><a href="#">精彩活动</a></li>
-            </ul>
-        </div>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">活动报名信息填写</h4>
       </div>
-    </div>
-    <!--Breadcrumb Wrap End -->
-    
-    <!--Content Wrap Start-->
-    <div class="gt_main_content_wrap">
-          <!--Shop Wrap Start-->
-        <section class="gt_shop_detail_bg gt_courses_bg">
-            <div class="container">
+      <div class="modal-body">
 
-            {volist name="activitiesdetails" id="details"}
-            <div class="gt_product_detail_border_wrap">
-                <div class="row">
-                  <div class="col-md-6">
-                      <div class="gt_shop_slider_outer_wrap">
-                          <div id="shop_detail_thumnail" class="shop_detail_thumnail">
-                              {volist name="yjf" id="value"}
-                              <ul class="slides">
-                                  <li>
-                                      <img src="/uploads/{$value.pic}" alt="" />
-                                  </li>
-                              </ul>
-                              {/volist}
-                          </div>
-                          
-                          <div class="shop_detaild_slider">
-                              <div id="shop_detaild_slider">
-                                  <ul class="slides">
-                                      <li>
-                                          <img src="/uploads/{$details.pic}" alt="" />
-                                      </li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  
-                  <div class="col-md-6">
-                      <div class="gt_shop_detail_banner">
-                          <h4>{$details.ac_title}</h4>
-                          <div class="gt_shop_rating_wrap">
-                              <ul>
-                                  <li><a href="#"><i class="fa fa-star-half-full"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-star-half-full"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-star-half-full"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-star-half-full"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-star-half-full"></i></a></li>
-                              </ul>
-                              <span>(4 reviws) / Add to reviews</span>
-                          </div>
-                          <div class="gt_shop_price_wrap">
-                              <h5 style="font-family:Times New Roman,Georgia,Serif;">{$details.ac_opentime}~{$details.ac_closetime}</h4>
-                              <h5 style="font-family:Times New Roman,Georgia,Serif;">地址：{$details.ac_spot}</h5>
-                              <h5>{$details.ac_price}</h5>
-                              <h5 style="margin-top:5px;margin-bottom:5px;font-weight:thick;">举办方：{$details.ac_host}</h5>
-                              <h5>可报名人数：{$details.ac_contain}</h5>
-                              <h5>咨询热线：{$details.ac_contact}</h5>
-                              <!-- <span></span> -->
-                          </div>
-                          <!-- <div class="gt_product_detail_des"> -->
-                             <!--  <h5>{$details.ac_abstract}</h5> -->
-                             <!--  <p>{$details.ac_details}</p> -->
-                          <!-- </div> -->
-                          <div class="gt_product_button_wrap">
-                            <button id="signup" onclick="return false" ;>我要报名</button>
-                            <!-- <button>Whishlist</button> -->
-                          </div>
-                      </div>
-                  </div> 
-                </div>
-              </div>
-
-              <div class="col-md-12" style="margin-top:5px;margin-bottom:5px;">
-                <p>{$details.ac_details}</p>
-              </div> 
-              {/volist}
+        <form action="{:url('/activitiesregister', ['id'=>$details.activities_id])}" method="post" id="form">
+          <div class="form-group">
+            <label for="exampleInputEmail1"><h6>参与的活动名称：{$details.ac_title}</h6></label>
           </div>
-        </section>
-        <!--Shop Wrap End-->
+          <div class="form-group">
+            <label for="exampleInputPassword1">请选择活动使用的起始日期</label>
+            <input type="date" class="form-control" name="opentime"  id="exampleInputPassword1" >
+            <input type="date" class="form-control" name="closetime" id="exampleInputPassword1" >
+          </div>
+
+          <div class="form-group">
+            <label for="exampleInputEmail1">活动参与人数：</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" name="amount" placeholder="请填写活动参与的人数">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputEmail1">报名人：</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" name="condinator" placeholder="请填写实际报名人信息">
+          </div>
+
+          <div class="form-group">
+            <label for="exampleInputEmail1">联系方式：</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" name="contact" placeholder="报名确认成功后会有短信通知">
+          </div>
+
+           <div class="form-group">
+            <label for="exampleInputEmail1">备注：</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" name="comments" placeholder="如有信息需要备注，请填写备注信息">
+          </div>
+          <button type="submit" class="btn btn-default">提交</button>
+        </form>
+     <!--  <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div> -->
     </div>
+  </div>
+</div>
+
 
 {/block}
 
 {block name="myjs"}
 
+<script type="text/javascript">
+
+  window.onload = function()
+  { 
+    //当前时间的时间戳
+    var myDate=new Date();
+    var currenttimestamp =myDate.getTime();
+    //活动开始时间的时间戳
+    var opentime = document.getElementById('opentime');
+    var opentimeValue=opentime.innerHTML;
+    var opentimestamp = Date.parse(opentimeValue);
+    //活动结束时间的时间戳
+    var closetime = document.getElementById('closetime');
+    var closetimeValue=closetime.innerHTML;
+    var closetimestamp = Date.parse(closetimeValue);
+    console.log(currenttimestamp);
+    console.log(opentimestamp);
+    console.log(closetimestamp);
+
+    if (currenttimestamp >= closetimestamp) 
+    {
+      // alert("活动已经结束，无法报名");
+      var signup = document.getElementById("signup");
+
+      var signupText = document.getElementById("signup").innerHTML = '活动已经结束，无法参加';
+       signup.setAttribute('disabled','disabled');
+       console.log(signup);
+      return;
+
+    } 
+    if (currenttimestamp <= opentimestamp) 
+    {
+      var signupText = document.getElementById("signup").innerHTML = '活动还未开始，可提前报名，点我报名吧';
+      return;
+    } 
+
+    if (currenttimestamp >= opentimestamp && currenttimestamp <= closetimestamp) 
+    {
+       var signupText = document.getElementById("signup").innerHTML = '活动进行中，点我报名吧';
+      return;
+    } 
+
+  }; 
+
+</script>
+
+<script type="text/javascript">
+
+    $("#form").submit(function(e){
+          // alert("Submitted");
+          // return false;
+        });
+    
+</script>
+
+
+
+
+
 {/block}
+
+
