--- a/mobile/index/view/buy/baseinfo.html
+++ b/mobile/index/view/buy/baseinfo.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>修改基本信息</title>
-    <link rel="stylesheet" href="/static/mobile/css/amazeui.min.css">
-    <link rel="stylesheet" href="/static/mobile/css/wap.css">
+    <!--<link rel="stylesheet" href="/static/mobile/css/amazeui.min.css">-->
+    <!--<link rel="stylesheet" href="/static/mobile/css/wap.css">-->
+    <link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/app/index/js/jquery-1.8.3.min.js"></script>
+
     <style>
         body{
             width: 100%;
@@ -94,8 +97,11 @@
             {/if}
 
         </div>
-        <script src="/static/mobile/js/jquery.min.js"></script>
-        <script src="/static/mobile/js/amazeui.min.js"></script>
+        <!--<script src="/static/mobile/js/jquery.min.js"></script>-->
+        <!--<script src="/static/mobile/js/amazeui.min.js"></script>-->
+        <script src="/static/app/index/js/jquery.js"></script>
+        <script src="/static/app/index/js/bootstrap.js"></script>
+        <script src="/static/app/index/js/toastr.min.js"></script>
         <script>
             //        验证用户名
             $('#username').change(function(){
