--- a/mobile/index/view/buy/personal1.html
+++ b/mobile/index/view/buy/personal1.html
@@ -15,7 +15,7 @@
       <header data-am-widget="header"
           class="am-header am-header-default pet_head_block">
         <div class="am-header-left am-header-nav ">
-          <a href="#left-link" class="iconfont pet_head_jt_ico">&#xe601;</a>
+          <a href="{:url('index/index/index')}" class="iconfont pet_head_jt_ico">&#xe601;</a>
         </div>
         <div class="pet_news_list_tag_name">{$list['username']}</div>
         <div class="am-header-right am-header-nav">
