--- a/mobile/index/view/buy/confirm.html
+++ b/mobile/index/view/buy/confirm.html
@@ -1,28 +1,54 @@
-﻿{extend name="index/index"}
-
-{block name="main"}
-<!--Sub Banner Wrap Start -->
-    <div class="gt_sub_banner_bg default_width">
-        <div class="container">
-            <div class="gt_sub_banner_hdg  default_width">
-                <h2>订单确认</h2>
-                <h6>欢迎来到还没名字的网站~</h6>
-            </div>
-        </div>
-    </div>
-    <!--Sub Banner Wrap End -->
-    <!--Breadcrumb Wrap End -->
-    <div class="gt_breadcrumb_bg default_width">
-        <div class="container">
-            <div class="gt_breadcrumb_wrap default_width">
-                <ul>
-                    <li><a href="{:url('index/index/index')}">首页</a></li>
-                    <li><a href="{:url('index/cart/index')}">订单确认</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!--Breadcrumb Wrap End -->
+﻿<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <!--<link rel="stylesheet" href="/static/mobile/css/amazeui.min.css">-->
+    <!--<link rel="stylesheet" href="/static/mobile/css/wap.css">-->
+    <link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/app/index/js/jquery-1.8.3.min.js"></script>
+    <title>我的购物车</title>
+    <style>
+        body{
+            width: 100%;
+        }
+        .head{
+            width: 100%;
+            height: 50px;
+            background-color: lightskyblue;
+            color: white;
+            text-align: left;
+            line-height: 50px;
+            padding-left: 20px;
+        }
+        form{
+            padding: 20px;
+        }
+        .span1{
+            display: block;
+            float: left;
+        }
+        .span2{
+            display: block;
+            float: right;
+            padding-right: 20px;
+        }
+        ul{
+            padding: 20px;
+        }
+        li{
+            display: inline-block;
+            margin-right: 20px;
+        }
+    </style>
+</head>
+<body>
+<div class='head'>
+    <span class="span1">订单确认</span>
+    <a href="{:url('index/personal/index')}"><span class="span2">返回</span></a>
+</div>
     <div class="gt_main_content_wrap">
         <!--Shop Wrap Start-->
         <section class="gt_shop_detail_bg gt_courses_bg">
@@ -57,21 +83,21 @@
                         {/volist}
                         <tr>
                             <td colspan="7" style="text-align: right">
-                            合计
+                            合计:
                             <span id="total" class="h2">{$s}</span>
                             元
                             </td>
                         </tr>
                     </table>
-                    <div style="margin-left: 850px" class="mt50">
+                    <div  class="mt50">
                         <form action="index/order/index" method="post">
-                            <button type="button" href="" class="btn btn-info btn-lg">取消订单</button>
+                            <a href="{:url('index/Cart/showindex')}" class="btn btn-info btn-sm">取消订单</a>
                             <input type="hidden" name="aid" value="{$address['ua_id']}">
                             <input type="hidden" name="total" value="{$s}">
                             {volist name="data" id="v"}
                             <input type="hidden" name="{$v['ca_id']}" value="">
                             {/volist}
-                            <button type="submit" class="btn btn-success btn-lg ml30" id="settle">确认支付</button>
+                            <button type="submit" class="btn btn-success btn-sm ml30" id="settle">确认支付</button>
                         </form>
                     </div>
                 </div>
@@ -81,14 +107,13 @@
     </div>
 
     <!--Content Wrap End-->
-{/block}
-
-{block name="myjs"}
-{js href="/static/app/index/js/toastr.min.js"}
+<script src="/static/app/index/js/jquery.js"></script>
+<script src="/static/app/index/js/bootstrap.js"></script>
+<script src="/static/app/index/js/toastr.min.js"></script>
 <script>
 
 </script>
-{/block}
+
 
 </body>
 </html>
