--- a/mobile/index/view/index/detail.html
+++ b/mobile/index/view/index/detail.html
@@ -49,7 +49,7 @@
             <div>
                 <input type="hidden" name="gid" id="gid" value="{$data['gid']}">
                 <input type="hidden" name="cid" id="cid" value="{$data['cid']}">
-                <!--<a href="{:url('index/Cart/index',['gid'=>$data['gid'],'$cid'=>$data['cid']])}">加入购物车</a>-->
+                <!--<a href="{:url('index/Cart/index',['gid'=>$data['gid'],'cid'=>$data['cid']])}">加入购物车</a>-->
                 <button type="button" class="am-btn am-btn-danger am-round" id="cart">加入购物车</button>
             </div>
             <div class="pet_article_dowload">
@@ -217,7 +217,7 @@
     $('#cart').click(function(){
         var gid=document.getElementById('gid').value;
         var cid=document.getElementById('cid').value;
-        console.log(gid,cid);
+        //console.log(gid,cid);
         docartAjax(gid,cid);
     });
     //执行加入购物车的AJAX请求
