--- a/mobile/index/view/index/index.html
+++ b/mobile/index/view/index/index.html
@@ -95,7 +95,7 @@
         <a href="index/index/index"><i class="fa fa-home"></i>首页<i class="fa fa-circle"></i></a></li>
     <li>
 
-        <a class="has-submenu" href="#"><i class="fa fa-camera"></i>个人中心<i class="fa fa-plus"></i></a>
+        <a class="has-submenu" href="{:url('index/Personal/index')}"><i class="fa fa-camera"></i>个人中心<i class="fa fa-plus"></i></a>
 
 
     </li>
@@ -197,7 +197,7 @@
 
     <a class="" href="{:url('/listshow',['cid'=>'4'])}"><i class="fa fa-pie-chart"></i>酒店</a>
 
-    <a href="contact.html"><i class="fa fa-user"></i>个人中心</a>
+    <a href="{:url('index/Personal/index')}"><i class="fa fa-user"></i>个人中心</a>
 
 </div>
 
