--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -205,8 +204,15 @@
 
     {css href="/static/app/index/css/reset.css"}
     {css href="/static/app/index/css/dashboard.css"}
-    {css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}
+    <!--{css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}-->
     <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
+    {css href="/static/app/index/css/jquery.city.css" rel="stylesheet" type="text/css"}
+    {css href="/static/app/index/css/animate.min.css" rel="stylesheet" type="text/css"}
+    {css href="/static/app/index/css/jquery.city.bootstrap.css" rel="stylesheet" type="text/css"}
+    {css href="/static/app/index/css/bootstrap.css" rel="stylesheet" type="text/css"}
+    <!--加减按钮插件-->
+    {css href="/static/app/index/css/bootstrap-spinner.css" rel="stylesheet" type="text/css"}
+
     <!--end-yjf-->
 </head>
 <body>
